@@ -31,10 +31,10 @@ fn parse_serde_struct() -> DummySerdeStruct<'static> {
 }
 
 fn gen_messy_json_schema() -> MessyJson {
-    MessyJson::Obj(Box::new(MessyJsonObject::new(
+    MessyJson::Obj(MessyJsonObject::new(
         vec![(
             "hello".to_string(),
-            MessyJson::Obj(Box::new(MessyJsonObject::new(
+            MessyJson::Obj(MessyJsonObject::new(
                 vec![(
                     "hola".to_string(),
                     MessyJson::String(MessyJsonScalar::new(false)),
@@ -42,12 +42,12 @@ fn gen_messy_json_schema() -> MessyJson {
                 .into_iter()
                 .collect(),
                 false,
-            ))),
+            )),
         )]
         .into_iter()
         .collect(),
         false,
-    )))
+    ))
 }
 
 fn parse_messy_json(schema: &MessyJson) -> MessyJsonValueContainer {
