@@ -32,11 +32,11 @@ fn parse_serde_value_optional_obj(input: &str) -> Value {
 }
 
 fn gen_messy_json_schema_optional_obj() -> MessyJson {
-    MessyJson::Obj(Box::new(MessyJsonObject::new(
+    MessyJson::Obj(MessyJsonObject::new(
         vec![
             (
                 "hello".to_string(),
-                MessyJson::Obj(Box::new(MessyJsonObject::new(
+                MessyJson::Obj(MessyJsonObject::new(
                     vec![(
                         "hola".to_string(),
                         MessyJson::String(MessyJsonScalar::new(false)),
@@ -44,7 +44,7 @@ fn gen_messy_json_schema_optional_obj() -> MessyJson {
                     .into_iter()
                     .collect(),
                     false,
-                ))),
+                )),
             ),
             (
                 "coucou".to_string(),
@@ -62,7 +62,7 @@ fn gen_messy_json_schema_optional_obj() -> MessyJson {
         .into_iter()
         .collect(),
         false,
-    )))
+    ))
 }
 
 fn parse_messy_json_optional_obj(schema: &MessyJson) {
